--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
