--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
+    "clsx": "^2.1.0",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -26,11 +27,12 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
