--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "tailwind-variants": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
