--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
     "tailwind-variants": "^0.2.0"
   },
@@ -45,6 +46,7 @@
     "jest-expo": "~50.0.2",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "react-native-svg-transformer": "^1.4.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
