--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.4.2",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.37.1",
+    "axios": "^1.7.2",
     "clsx": "^2.1.0",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
@@ -31,12 +34,14 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.6",
-    "tailwind-variants": "^0.2.0"
+    "tailwind-variants": "^0.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
