--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.6",
     "tailwind-variants": "^0.2.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
