🧪test: Adicionar setup de testes e testes de componentes importantes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,6 @@
     "camelcase": "off",
     "@typescript-eslint/no-var-requires": "off",
     "react/display-name": "off"
-  }
+  },
+  "plugins": ["testing-library"]
 }
