--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
+    "test:coverage": "jest --coverage",
     "lint": "eslint --fix --ext .ts,.tsx ."
-  },
-  "jest": {
-    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
@@ -36,19 +34,23 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.73.4",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.6",
     "tailwind-variants": "^0.2.0",
-    "yup": "^1.4.0",
-    "react-native-reanimated": "~3.6.2"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@testing-library/react-native": "^12.5.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "jest": "^29.2.1",
+    "eslint-plugin-testing-library": "^6.2.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "jest-expo": "~50.0.2",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
