--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.73.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
