--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.37.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
