--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "test:coverage": "jest --coverage",
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.51.5",
     "react-native": "0.73.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
