👷build: Definir builds de preview e production

--- a/app.json
+++ b/app.json
@@ -16,14 +16,19 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.fatec.savpets",
+      "runtimeVersion": {
+        "policy": "appVersion"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#0F172A"
       },
-      "package": "com.fatec.savpets"
+      "package": "com.fatec.savpets",
+      "runtimeVersion": "1.0.0"
     },
     "web": {
       "bundler": "metro",
@@ -35,6 +40,17 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "05656c6f-a928-44e4-b50b-047a9a78db53"
+      }
+    },
+    "updates": {
+      "url": "https://u.expo.dev/05656c6f-a928-44e4-b50b-047a9a78db53"
     }
   }
 }
