♻️refactor: Retirar dependências dos useEffect para evitar execer; remover import do scrollview não usado

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
   "rules": {
     "camelcase": "off",
     "@typescript-eslint/no-var-requires": "off",
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "react-hooks/exhaustive-deps": 0
   },
   "plugins": ["testing-library"]
 }
