--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "expo-updates": "~0.24.13",
     "expo-web-browser": "~12.8.2",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
@@ -36,7 +37,6 @@
     "react-hook-form": "^7.51.5",
     "react-native": "0.73.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.29.0",
@@ -46,7 +46,7 @@
     "tailwind-variants": "^0.2.0",
     "use-context-selector": "^2.0.0",
     "yup": "^1.4.0",
-    "expo-updates": "~0.24.13"
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
