🐛fix: Corrigir seções filtradas por cargo usando map; arrumar scroll no navigation

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Savpets",
+    "name": "SavPets",
     "slug": "savpets",
     "version": "1.0.0",
     "orientation": "portrait",
